<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/modle_logo"
            android:fontFamily="monospace"
            android:text="@string/welcome_to_roehampton_university"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/show"
            android:text="show"/>
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:fontFamily="monospace"-->
        <!--android:text="Lorem ipsum dolor sit amet,estiae, dolorem, itaque nesciunt perferendis architecto consequuntur earum. Harum, nesciunt!"-->
        <!--android:textColor="#fff"-->
        <!--android:textSize="15sp" />-->
        <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_gravity="center">-->
        <!--&lt;!&ndash;<Button&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_margin="10dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="Login"&ndash;&gt;-->
        <!--&lt;!&ndash;android:background="@drawable/buttonstylepink"&ndash;&gt;-->
        <!--&lt;!&ndash;android:textColor="#fff"/>&ndash;&gt;-->
        <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="10dp"-->
        <!--android:background="@drawable/buttonstyle2"-->
        <!--android:text="Register"-->
        <!--android:textColor="#fff" />-->
        <!--</LinearLayout>-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_account_circle_black_24dp"/>
            <EditText
                android:id="@+id/reg_Fname"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/first_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_perm_contact_calendar_black_24dp"/>
            <EditText
                android:id="@+id/reg_Sname"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/second_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <EditText
                android:id="@+id/reg_Email"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/email_example_com"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_settings_black_24dp"/>
            <EditText
                android:id="@+id/reg_Group"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/group"/>
        </LinearLayout> <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_lock_black_24dp"/>
            <EditText
                android:id="@+id/reg_Pass"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_gravity="center_vertical"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_reg_regAct"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_register"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:fontFamily="monospace"
            android:text="@string/register"
            android:textColor="#fff" />
    </LinearLayout>


</LinearLayout>